Remove README and outdated theme files; refactor API and component documentation to reflect new modular architecture and external template system. Update project overview and enhance component system documentation for clarity and accuracy.

--- a/web-components-v2/header/luxury.html
+++ b/web-components-v2/header/luxury.html
@@ -1,42 +1,53 @@
 <header class="casino-header luxury-header">
-    <div class="luxury-border"></div>
     <div class="container">
         <div class="header-content">
+            <!-- Logo Section -->
             <div class="logo">
                 <a href="#" class="logo-link">
-                    <div class="logo-crest">
-                        <span class="crest-icon">👑</span>
-                        <div class="crest-details">
-                            <span class="brand-name">ROYALE</span>
-                            <span class="brand-tagline">EST. 2024</span>
-                        </div>
-                    </div>
+                    <span class="logo-icon">♔</span>
+                    <span class="logo-text">Royal Casino</span>
+                    <span class="logo-subtitle">Premium</span>
                 </a>
             </div>
+
+            <!-- Navigation -->
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li><a href="#" class="nav-link active">Casino Royale</a></li>
-                    <li><a href="#" class="nav-link">High Stakes</a></li>
-                    <li><a href="#" class="nav-link">Private Tables</a></li>
-                    <li><a href="#" class="nav-link">Concierge</a></li>
-                    <li><a href="#" class="nav-link">Prestige Club</a></li>
+                    <li><a href="#casino" class="nav-link active">Casino</a></li>
+                    <li><a href="#sports" class="nav-link">Sports</a></li>
+                    <li><a href="#live" class="nav-link">Live Casino</a></li>
+                    <li><a href="#promotions" class="nav-link">Promotions</a></li>
+                    <li><a href="#vip" class="nav-link">VIP Club</a></li>
                 </ul>
             </nav>
+
+            <!-- Header Actions -->
             <div class="header-actions">
-                <div class="luxury-info">
-                    <span class="membership-tier">VIP Gold</span>
-                    <div class="points-display">
-                        <span class="points-label">Points:</span>
-                        <span class="points-value">14,250</span>
-                    </div>
+                <div class="user-balance">
+                    <span class="balance-label">Balance</span>
+                    <span class="balance-amount">$1,250.00</span>
                 </div>
-                <a href="#" class="btn btn-luxury">Become VIP</a>
+                <button class="btn btn-secondary">Login</button>
+                <button class="btn btn-primary">Join VIP</button>
             </div>
-            <button class="mobile-menu-toggle" aria-label="Toggle menu">
+
+            <!-- Mobile Menu Toggle -->
+            <button class="mobile-toggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
         </div>
+
+        <!-- Mobile Navigation -->
+        <nav class="mobile-nav">
+            <ul class="mobile-nav-list">
+                <li><a href="#casino" class="mobile-nav-link">Casino</a></li>
+                <li><a href="#sports" class="mobile-nav-link">Sports</a></li>
+                <li><a href="#live" class="mobile-nav-link">Live Casino</a></li>
+                <li><a href="#promotions" class="mobile-nav-link">Promotions</a></li>
+                <li><a href="#vip" class="mobile-nav-link">VIP Club</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
