--- a/web-components-v2/header/minimal.html
+++ b/web-components-v2/header/minimal.html
@@ -3,32 +3,31 @@
         <div class="header-content">
             <div class="logo">
                 <a href="#" class="logo-link">
-                    <span class="logo-mark">C</span>
-                    <span class="logo-text">Casino</span>
+                    <span class="logo-text">CasinoPro</span>
                 </a>
             </div>
             <nav class="main-nav">
-                <ul class="nav-list">
-                    <li><a href="#" class="nav-link active">Games</a></li>
-                    <li><a href="#" class="nav-link">Sports</a></li>
-                    <li><a href="#" class="nav-link">Live</a></li>
-                    <li><a href="#" class="nav-link">Promotions</a></li>
-                </ul>
+                <a href="#casino" class="nav-link active">Casino</a>
+                <a href="#sports" class="nav-link">Sports</a>
+                <a href="#live" class="nav-link">Live</a>
+                <a href="#promotions" class="nav-link">Promotions</a>
+                <a href="#vip" class="nav-link">VIP</a>
             </nav>
             <div class="header-actions">
-                <button class="btn-icon" aria-label="Search">
-                    <span class="icon">🔍</span>
-                </button>
-                <button class="btn-icon" aria-label="Account">
-                    <span class="icon">👤</span>
-                </button>
-                <a href="#" class="btn btn-minimal">Play</a>
+                <button class="btn btn-primary">Join Now</button>
             </div>
-            <button class="mobile-menu-toggle" aria-label="Toggle menu">
+            <button class="mobile-toggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
         </div>
+        <nav class="mobile-nav">
+            <a href="#casino" class="mobile-nav-link">Casino</a>
+            <a href="#sports" class="mobile-nav-link">Sports</a>
+            <a href="#live" class="mobile-nav-link">Live</a>
+            <a href="#promotions" class="mobile-nav-link">Promotions</a>
+            <a href="#vip" class="mobile-nav-link">VIP</a>
+        </nav>
     </div>
 </header>
