--- a/web-components-v2/header/modern.html
+++ b/web-components-v2/header/modern.html
@@ -3,35 +3,37 @@
         <div class="header-content">
             <div class="logo">
                 <a href="#" class="logo-link">
-                    <div class="logo-icon">
-                        <span class="icon-diamond">💎</span>
-                        <span class="icon-glow"></span>
-                    </div>
+                    <span class="logo-icon">♦</span>
                     <span class="logo-text">CasinoPro</span>
                 </a>
             </div>
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li><a href="#" class="nav-link active" data-section="casino">Casino</a></li>
-                    <li><a href="#" class="nav-link" data-section="sports">Sports</a></li>
-                    <li><a href="#" class="nav-link" data-section="live">Live</a></li>
-                    <li><a href="#" class="nav-link" data-section="promotions">Promotions</a></li>
-                    <li><a href="#" class="nav-link" data-section="vip">VIP Club</a></li>
+                    <li><a href="#casino" class="nav-link active">Casino</a></li>
+                    <li><a href="#sports" class="nav-link">Sports</a></li>
+                    <li><a href="#live" class="nav-link">Live</a></li>
+                    <li><a href="#promotions" class="nav-link">Promotions</a></li>
+                    <li><a href="#vip" class="nav-link">VIP</a></li>
                 </ul>
-                <div class="nav-indicator"></div>
             </nav>
             <div class="header-actions">
-                <div class="balance-display">
-                    <span class="balance-label">Balance:</span>
-                    <span class="balance-amount">$2,450.00</span>
-                </div>
-                <a href="#" class="btn btn-primary">Join Now</a>
+                <button class="btn btn-secondary login-btn">Login</button>
+                <button class="btn btn-primary signup-btn">Sign Up</button>
             </div>
-            <button class="mobile-menu-toggle" aria-label="Toggle menu">
+            <button class="mobile-toggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
         </div>
+        <nav class="mobile-nav">
+            <ul class="mobile-nav-list">
+                <li><a href="#casino" class="mobile-nav-link">Casino</a></li>
+                <li><a href="#sports" class="mobile-nav-link">Sports</a></li>
+                <li><a href="#live" class="mobile-nav-link">Live</a></li>
+                <li><a href="#promotions" class="mobile-nav-link">Promotions</a></li>
+                <li><a href="#vip" class="mobile-nav-link">VIP</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
